--- a/client/user.html
+++ b/client/user.html
@@ -1461,6 +1461,7 @@
                                </div>
            </section>
                            </div>
+        <main>
         <style>
             body {
                 font-family: Arial, sans-serif;
@@ -1483,7 +1484,7 @@
                 padding: 25px 35px;
                 border: 5px solid rgb(255, 255, 255);
                 box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 30px 30px -20px;
-                margin-left: 600px;
+                margin-left: 500px;
                 flex: 1;
                 margin-right: 20px;
             }
