--- a/client/user.html
+++ b/client/user.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="profile" href="https://gmpg.org/xfn/11">
       <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
-      <title>User Application</title>
+      <title>Dashboard</title>
       <link rel="canonical" href="https://www.trucknet.io/careers/" />
       <meta property="og:locale" content="en_US" />
       <meta property="og:type" content="article" />
@@ -1613,8 +1613,8 @@
                     userDetailsSection.style.display = 'block';
                 
                 // Initialize Google Maps
-                var sourceCoordinates = { lat: 19.114394813340247, lng: 72.86973389999999 }; // Example coordinates (San Francisco) 19.114394813340247, 72.86973389999999
-                var destinationCoordinates = { lat: 19.09691018219005, lng: 72.8517134195434 }; // Example coordinates (Los Angeles) 19.09691018219005, 72.8517134195434
+                var sourceCoordinates = { lat: 19.099592556986597, lng: 72.85155812917141 }; // Mumbai
+                var destinationCoordinates = { lat: 19.57806649250728, lng: 74.20630444308405 }; // 19.57806649250728, 74.20630444308405
                 initMap(sourceCoordinates, destinationCoordinates);
             });
         });
