--- a/client/company_individual.html
+++ b/client/company_individual.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="profile" href="https://gmpg.org/xfn/11">
       <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
-      <title>Company/Individual</title>
+      <title>Dashboard</title>
       <link rel="canonical" href="https://www.trucknet.io/careers/" />
       <meta property="og:locale" content="en_US" />
       <meta property="og:type" content="article" />
