--- a/client/about.html
+++ b/client/about.html
@@ -1773,7 +1773,7 @@
 											<div class="elementor-widget-container">
 											   <div class="elementor-cta">
 												  <div class="elementor-cta__bg-wrapper">
-													 <div class="elementor-cta__bg elementor-bg" style="background-image: url(https://lh3.googleusercontent.com/pw/AP1GczOMjT-bCPtizoZMQTdmmTCmPERp_MoT81l2X_7Tp8zIxqXrB8tCMmTN-pzWJWLazy8jjWpCGaXmULKaDDGArErXkeMIxzRW621hVHwXF8S17wLJ9rDcIEmKsGTsEW2IQlT-h_r6UxMfIR854olPUjjWwTDMKlyH5noLpBSBLXlKtpZMNYUjyUQop2AupQPP5k73S5lnOHvNGlqHi_sAykODzPk_1AvQe9M5cPSeqRmlaXWNE2bmaUr04FlUnib1Ph7wEvUOuqsA3bgG2jQsYD84XMJWWB-qM3RKBZ3yAnf7zYwN0vr8fUFHakSRKAlsc1O_P8CMkNlVIk8PwrtyJ8yF5YLxyJqri2Ra1QfBV8E-NoKKC_il7V0lyt6dyJm-nD0pUGH-uSUBz77ui4RYffGwqAElrzKFeQdfgDjveNL7HDvKw-QmMUDlyjmoWUZef9UK-MAPqclU34fZr3udHfHHS55RTQUxWQfQlaVYzBJIjABuKNYZ6j4z-h3c_G1Aer6FW6jMtOXuDFc2lq8jdEs3iHxeB84CWYGwi6KBwKeAyeD7OQg1Cwc1bAnKjROTMpguxyatFagTCy8JD_9BsbIinHbjCYcSeVHVqkjq0k0J00sqC0TTkB8sybjOpPVVQet6rW90n7LvU43tFuOKRo-TXcfThuOI4oZXaFnSHKDRD7VEmRzW3NdjoEZ9KxvT0I4xIfsy_JTgp_Cy12iWv3jBcd3D_cjV8rDAeaegv-MLVztwH6WcB0ql7FLRwoNSmJCTRB6Zcn21y0B_OsnahaLFIVnQThhLMCdOB1KRS2Y3a56huy5LczPvgCu3PpqRDQwhV7Ww54mJ_5rP3Qs-bLuWaFGXj5LJZkvYrXp01rKDjLpHy27BSj4gr18QsGhlXxLFXi3gTAz5xnTS_XJfOrz43oT6YTUChIIirzqBwp6fnGVFBJG0nVvEk1Lxiee0Uk8VEWRbUjz9RnSsPxAua87tKh3zMWe6RQ=w664-h1012-s-no-gm?authuser=1);" role="img" aria-label="TF43HV0BU-U03D4UVQUUR-26eb81806c56-512"></div>
+													 <div class="elementor-cta__bg elementor-bg" style="background-image: url(https://lh3.googleusercontent.com/pw/AP1GczMUdcyh47kOPy0RtDIwVh0ZIeSBZ08PmFVTk8mSyAyMH43mCcvd05KRfhtb51ZogRq4mM4W5diUGfuKkcONYXWtD6vDRvhNwqhm_urfPEz1441oXqDaUH3FHcz33v1NZMxgbI5dK-W6T9gaDLvvjNX8qn1Kz8V0o00ZXHREkgnPOa4IV56JQihaG1rUg15Kv_W_IuvELehxsHFP94NmALTRBe8TnSF3qOxJevIqUnz8Lw7QLzshL3eX5zsF2ZFq9lHkMEAPhk_YslpelJPn9ZtDXvjsUc5-09p3CRUFQxDDgSI2u0cXH4znIp5IsmekOO0GndyPiQd0t823Wtk7VF98f9rq1PMrmZoBOFZZWuNZh2cDImRQlrUlBXCzHQGwMnFXMJxwT9-eNDxlslRhANJDPDlJVJ4fIYKtJM_q4s3xVeTwVUFuY_yvG6l_Kgx9f7UhKHp5PE6NY5_aCuCUythbEM441dFUeQ2sxzOWZLP-vnahYNbOm4AR8284FnkBu7aw_7AsQBfagyu-mm-nGJzq9fZpwcJMJ89dJBMEoHoD-588B-zI3GaeFac6UdSFR0oNnL6QjHHPqAETgunOzbT6qpUsXw_hCrv_KFpzhlacOymjEuUfHFf1ISCFMWlCVN51gTTxzr7yKt6B75g1rilm9apA-RbakwCORf3MoUxasIAAYQ6FsXa1r0-vvD2h9U99geWidnJw0C3foHyUqnqTrJf07SIV5jmkCgtmCyOdoWF4ASjKFXk4MxsDJ-MTX8cmmCZCxFjLK162bVVqhsyYyUOgevEBPhT7A-uo1VZHnvLUKe24_N-2cxzK0vF1L3vjta5JG1ndKTmVCqj-yFuDB8PKI4O6cWREv-s27I4_XV_sxqQCeJNv52gNLbO4RnoDbG1ghW6gLJpyCrml9T9jcW03rHol0sV539SKalyU0PkvvB2ViJqtRo0QiYeJCpXCRtUt-fKsZwKzlUy2Mku4fLVsWZuy=w800-h800-s-no-gm?authuser=1);" role="img" aria-label="TF43HV0BU-U03D4UVQUUR-26eb81806c56-512"></div>
 													 <div class="elementor-cta__bg-overlay"></div>
 												  </div>
 												  <div class="elementor-cta__content">
@@ -1781,7 +1781,7 @@
 														Aman Maurya					
 													 </h2>
 													 <div class="elementor-cta__description elementor-cta__content-item elementor-content-item">
-														Head of R&D					
+														Web Developer					
 													 </div>
 												  </div>
 											   </div>
@@ -1803,7 +1803,7 @@
 														Shubham Gupta					
 													 </h2>
 													 <div class="elementor-cta__description elementor-cta__content-item elementor-content-item">
-														Business Development Manager					
+														Web Developer					
 													 </div>
 												  </div>
 											   </div>
@@ -1837,7 +1837,7 @@
 													  Divyan Jain					
 												   </h2>
 												   <div class="elementor-cta__description elementor-cta__content-item elementor-content-item">
-													  Head of R&D					
+													  Designer					
 												   </div>
 												</div>
 											 </div>
@@ -1859,7 +1859,7 @@
 													  Vipul Gupta					
 												   </h2>
 												   <div class="elementor-cta__description elementor-cta__content-item elementor-content-item">
-													  Business Development Manager					
+													  Android Developer UI/UX Designer					
 												   </div>
 												</div>
 											 </div>
