--- a/client/user.html
+++ b/client/user.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="profile" href="https://gmpg.org/xfn/11">
       <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
-      <title>Dashboard</title>
+      <title>User Application</title>
       <link rel="canonical" href="https://www.trucknet.io/careers/" />
       <meta property="og:locale" content="en_US" />
       <meta property="og:type" content="article" />
@@ -1602,7 +1602,7 @@
                     // Create user details HTML
                     var userDetailsHTML = '<div>Date: ' + userDate + '</div>';
                     userDetailsHTML += '<div>Username: ' + userName + '</div>';
-                    userDetailsHTML += '<div style="font-size: 18px;">Route: ' + userSource + ' &#8594; ' + userDestination + '</div>';
+                    userDetailsHTML += '<div style="font-size: 18px;">From: ' + userSource + ' &#8594; ' + 'To: ' + userDestination + '</div>';
 
     
                     // Update user details content
