--- a/client/about.html
+++ b/client/about.html
@@ -1600,7 +1600,7 @@
 											<div class="elementor-widget-container">
 											   <div class="elementor-cta">
 												  <div class="elementor-cta__bg-wrapper">
-													 <div class="elementor-cta__bg elementor-bg" style="background-image: url(https://lh3.googleusercontent.com/pw/AP1GczMUdcyh47kOPy0RtDIwVh0ZIeSBZ08PmFVTk8mSyAyMH43mCcvd05KRfhtb51ZogRq4mM4W5diUGfuKkcONYXWtD6vDRvhNwqhm_urfPEz1441oXqDaUH3FHcz33v1NZMxgbI5dK-W6T9gaDLvvjNX8qn1Kz8V0o00ZXHREkgnPOa4IV56JQihaG1rUg15Kv_W_IuvELehxsHFP94NmALTRBe8TnSF3qOxJevIqUnz8Lw7QLzshL3eX5zsF2ZFq9lHkMEAPhk_YslpelJPn9ZtDXvjsUc5-09p3CRUFQxDDgSI2u0cXH4znIp5IsmekOO0GndyPiQd0t823Wtk7VF98f9rq1PMrmZoBOFZZWuNZh2cDImRQlrUlBXCzHQGwMnFXMJxwT9-eNDxlslRhANJDPDlJVJ4fIYKtJM_q4s3xVeTwVUFuY_yvG6l_Kgx9f7UhKHp5PE6NY5_aCuCUythbEM441dFUeQ2sxzOWZLP-vnahYNbOm4AR8284FnkBu7aw_7AsQBfagyu-mm-nGJzq9fZpwcJMJ89dJBMEoHoD-588B-zI3GaeFac6UdSFR0oNnL6QjHHPqAETgunOzbT6qpUsXw_hCrv_KFpzhlacOymjEuUfHFf1ISCFMWlCVN51gTTxzr7yKt6B75g1rilm9apA-RbakwCORf3MoUxasIAAYQ6FsXa1r0-vvD2h9U99geWidnJw0C3foHyUqnqTrJf07SIV5jmkCgtmCyOdoWF4ASjKFXk4MxsDJ-MTX8cmmCZCxFjLK162bVVqhsyYyUOgevEBPhT7A-uo1VZHnvLUKe24_N-2cxzK0vF1L3vjta5JG1ndKTmVCqj-yFuDB8PKI4O6cWREv-s27I4_XV_sxqQCeJNv52gNLbO4RnoDbG1ghW6gLJpyCrml9T9jcW03rHol0sV539SKalyU0PkvvB2ViJqtRo0QiYeJCpXCRtUt-fKsZwKzlUy2Mku4fLVsWZuy=w800-h800-s-no-gm?authuser=1);" role="img" aria-label="TF43HV0BU-U03D4UVQUUR-26eb81806c56-512"></div>
+													 <div class="elementor-cta__bg elementor-bg" style="background-image: url(assets/images/aman.jpeg);" role="img" aria-label="TF43HV0BU-U03D4UVQUUR-26eb81806c56-512"></div>
 													 <div class="elementor-cta__bg-overlay"></div>
 												  </div>
 												  <div class="elementor-cta__content">
@@ -1622,7 +1622,7 @@
 											<div class="elementor-widget-container">
 											   <div class="elementor-cta">
 												  <div class="elementor-cta__bg-wrapper">
-													 <div class="elementor-cta__bg elementor-bg" style="background-image: url(https://lh3.googleusercontent.com/pw/AP1GczPyypt7pfAPedGz1gJ8CEr7O8_1akqb5RpyTNva3zx6n4z_sf0JPIL8o9xRbvVrjc-TGRlXal9Awl9mt2Q7DDar4ak45sqahE3GOVo3QwnOEHdMfcoN7x9QATXi1vzJZa82SR9ru0MemJNngVw8jm3KEa90MGSixLVQWU1GpC8a2OOWcrXRVg0619eHFaif2hNgLxadr8bmxVITy646Gy6r2OfupIG47OFd_XYRViNlQ21qmHrlOD29pOcqQzULBsKh8gEXqAIvo5Dq6hoM2CMdjVV8rECXHnrX8ipakj4CXs7FNnqKk6unJBDS_jddJTUO3bRYMRb4Iz8W7blZo_1nnmEJYddwe3jcki5Qzln__B5EhXYRFETu0tg06S54RaCwSXTGHZW76frzDBv3G9c1R5lEMMER_VHwsCInLo-ar_XF6frYBlZr-CqP9R3rC91hONiKEXSSZ8IGYo9DgqZjmLYUQ62CFAo0lySXSLHJ6EEZ2hIcdmjjUYCWUPKL_0KFvqvoaKWj1ZKMT2kD57f7IeivN0pCMjV--lRNc6MqpiOZpI2twBfC-wra18oDlyNwug7jnUeJMu2SzBfDRzlKm4KLxh99inL51dB0mYASeW1_DDb1H40nX0ZfTTTBox5DpK8degDUpD532nJfpDBwcm_9ag1pt6W9ixYo3GJyHtYGmItBJn52996WsySna9gs2YX4h88KrdZNaErwbiH97PnXgb2nu4i7mnwnNI--_bWoHXJZOMlVe4H4pNCs-1MECZQSAmtCMEI6mLfEvqJbJwx8LWl_iQRk3Q1dSNA0-jQ8a7Z2vsl6RT1SYvU9wc72KJcmuxoCeQ_Ffm694Yw_n_zeix9VU9ZZH7dmVSvb_dqQjvlGvvhQ4Ut5YquOG9wbU8OPTMI9zapga3YcQprnZvssdd2JdT-5xed52Gx3XLFxwHhsfM0w2w5lUcJww-yJJkf-QDzhv4n5GADhNnDkdwh3APH8=w964-h1286-s-no-gm?authuser=1);" role="img" aria-label="Lana Elner photo"></div>
+													 <div class="elementor-cta__bg elementor-bg" style="background-image: url(assets/images/shubham.jpg);" role="img" aria-label="Lana Elner photo"></div>
 													 <div class="elementor-cta__bg-overlay"></div>
 												  </div>
 												  <div class="elementor-cta__content">
@@ -1656,7 +1656,7 @@
 										  <div class="elementor-widget-container">
 											 <div class="elementor-cta">
 												<div class="elementor-cta__bg-wrapper">
-												   <div class="elementor-cta__bg elementor-bg" style="background-image: url(https://lh3.googleusercontent.com/pw/AP1GczOBoTy6wkUYbAaRODBKldbHi5R6yUoQnI9QHvYmQexHE2mjmCbv87p31s0PPlGuGOT-m_s0E_fJiz3LXcC5Mb5coGMEjcLmaAv0Ui3EZsE9RvjQdGkpsrQWpkjAtxDJPpH8ba_91TbZbvL8U_pDYTJAMl9nk4BOY9y12mxBPgq1TgzVKEEyeugtuyq0oqQsxgrxoIIJ6Lrl7DxXOStKqXwzDZKscVsn3vC7r7FNq8LOaberk1kEduph3fLj9vVmgVkIbBGTC_qvT1OqsLwqgh4wUOi9d4UMTD4fOIXlY5t7K8J96YhHo8SDT4zvI3-xTu-iImNrgI64fvYMl8AD0nuHV_362Z_hCF1uywOtNKzomb3Uh5HoNEcwFQ0_-0hQvcvPKNjDFOw7goqfJKgOQwnoXs8IIY6EbTJz1EyMDCm9gHVaue9CnjsHwyFiBZC-dgBVSf1ql9tNhC_w3rSpPZD8PBJnjWBoVbRMDbCYssJIyTsHKFFimmVJD1_m6VWsm4ttMVL-mhbFJcC7wu5KRHuwcKICJNU9ZWNVJDzdRfJBMyqVFRNW0fe02QUNhxwbpX1yoISqfH7z2qZ08ZBEshwz2kyXB720fQhfxx-UBozS2i4ifohrEvpIqAPCNrGAs-Vj469bbnzCFTM472ais3uuXMDF3pYG8TyADE3cWTpsPCMxIpkZ4MD7FvtOI0-LJFmbrl5eGIIJnKOuHckreQyd3lGZTX3nKKAT4diJf9702D1NetXvfnwlCNsFCebvlyj4gNZFilWSrMLBpKe9dxozl_KGl-rrWJGv268krwoIAJso5svrtIp7ybyl3hxAQ6o62R21o-RyradAJO4m3NpAeb3Q7nKOOzHorfTL4y2alaO5-n6QfL1LNiFXgNnh55UyRF2fSHIr3F9jVYQiGoTE_Y810zuJVUXmg-Pfx3wdn-vk5NdyUTrVGIBuinSodejXPzK1HTRerwtskupVmZZLqK512nzb8Q=w964-h1286-s-no-gm?authuser=1);" role="img" aria-label="TF43HV0BU-U03D4UVQUUR-26eb81806c56-512"></div>
+												   <div class="elementor-cta__bg elementor-bg" style="background-image: url(assets/images/dj.jpeg);" role="img" aria-label="TF43HV0BU-U03D4UVQUUR-26eb81806c56-512"></div>
 												   <div class="elementor-cta__bg-overlay"></div>
 												</div>
 												<div class="elementor-cta__content">
@@ -1678,7 +1678,7 @@
 										  <div class="elementor-widget-container">
 											 <div class="elementor-cta">
 												<div class="elementor-cta__bg-wrapper">
-												   <div class="elementor-cta__bg elementor-bg" style="background-image: url(https://lh3.googleusercontent.com/pw/AP1GczPVV7Me4Uy25pUzEq7tjCfXCU1o-mxkEcZ6LmosoGIGKvEI3vTOnJGhbQothUPK-Aw4E6X9H_ybuALrYFwZhbDp8_OYYedqFi2PKJloA9qRwcpuUMH-8LxQyxuJELFrHRE9f-odk-GHhF6N1Um9MNpq2jZjoqfcPKVq6EQAOnJYD0KaLdMBrlVmD5UsXxhuwuIyQcYZ4X-77Qhg2qXHz7gnhcY5C6ZbV5HtX1phkd3PH6LmXDeGt1VfbokgHBgIXzc7nDW5EGm8gJie0y8wvUVURaENnwg382_jKxg-kBS-RjzBIcUDy7kP4Sd3CjMOfBtF--1J8aOjf-kmlWtsv0xfqqMe8qEfemmeqlOhas8KapXJ8SXFt4qVpw3RGgHdaDVp0BV4LTRuF9oxq1ect1C0aoxar41wJVTPY3E24EiKI6-k-AkhYjXRm6FCVxM6jSuQHjRgneKO0gcF-mZ6d0ZOqhaji3rR4MWMYfOcX5G0VGxdHOHxw0exydCUe2kcWM6yurUwXj-ZFdCaXFP8ELtVFIOdvIDuyHK9_JxMA5oBhBhhy81sRNiWgL8ly34-Tm9G9NOZlMLfntWDlXTTRoJsJp_eHDJ0fqQhrdEGu2a9XU5X4Ef6iDkEMTnznb0LWNP2XC30OzV8HxyH4c9O8TzdbIFlRoGZvFGSyBdLwgLKMNSSScgCOZw-7hAdm5ChqBwarzfHWk_V21-OpxygwC7SZFvsK9SHby6QLQES9KK3CJ4RpBVyIxYOW1a_UFgfoTiod4FtbP2GV9MW9XhBWjf97s1_IRfkc-tjYouvfaRoNdgz7KfxKtpNlFWVpgOREDCUCeYXZHhBGbzNJZrqC31OVnkGUfb-lGHWrBnSAWxrLNFNXY9aNjCyv9gJBkuHA0jcnVfz15Dh4WcEb--IVHwqz00gGBC-FcywoOpVQJxb7EZon7yakNfjjWuQyyloocuV4X4Oar27KEAnnRXNGbXs49lnGGdkfw=w964-h1286-s-no-gm?authuser=1);" role="img" aria-label="Lana Elner photo"></div>
+												<div class="elementor-cta__bg elementor-bg" style="background-image: url(assets/images/vip.jpg);" role="img" aria-label="Lana Elner photo"></div>
 												   <div class="elementor-cta__bg-overlay"></div>
 												</div>
 												<div class="elementor-cta__content">
