--- a/client/company_individual.html
+++ b/client/company_individual.html
@@ -1342,6 +1342,13 @@
          --wpforms-button-size-padding-h: 15px;
          --wpforms-button-size-margin-top: 10px;
          }
+
+         body {
+            background-image: url(https://img.freepik.com/free-vector/green-curve-frame-template-vector_53876-170365.jpg?t=st=1711722307~exp=1711725907~hmac=ab88568706946e2c8f4568a0e62f49ea2e1756386879daf82fed19381c60f604&w=740);
+            background-size: cover;
+            background-repeat: no-repeat;
+            /* Additional styles can be added here */
+        }
       </style>
    </head>
    <body data-rsssl=1 class="home page-template-default page page-id-330 wp-custom-logo elementor-default elementor-kit-5 elementor-page elementor-page-330">
